force-app/main/default/objects/BWP_Subscription__c/BWP_Subscription__c.object-meta.xml
<CustomObject>
    <label>BWP Subscription</label>
    <nameField>
        <label>Subscription Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BWP Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>