force-app/main/default/objects/BWP_Subscription__c/fields/Cancel_At__c.field-meta.xml
<CustomField>
    <fullName>Cancel_At__c</fullName>
    <label>Cancel At</label>
    <type>DateTime</type>
</CustomField>