force-app/main/default/objects/BWP_Subscription__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>BWP_Customer__c</referenceTo>
    <relationshipLabel>Subscriptions (Breadwinner Billing)</relationshipLabel>
    <relationshipName>BWP_Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>