force-app/main/default/objects/BWP_Subscription__c/fields/Latest_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Latest_Invoice__c</fullName>
    <label>Latest Invoice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>